# inventory_control-v5.0

./: .gitignore  README.md  pyproject.toml  run_server.py
administration/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
administration/migrations/: 0001_initial.py  0002_remove_userprofile_is_administration_employee_and_more.py  0003_alter_userprofile_national_id.py  0004_alter_department_options_and_more.py  0005_userprofile_nullable_faculty_department.py  0006_systemsettings_inventoryyear.py
core/: context_processors.py  settings.py  urls.py
documentation/: USER_GUIDE_AR.md  generate_erd.txt  inventory_itemcategory_sub_warehouse.csv  migration_plan.txt  users.xlsx
imports/: item_category.csv  users_to_import.xlsx
inventory/: admin.py  apps.py  forms.py  helper.py  middleware.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
inventory/migrations/: 0001_initial.py  0002_alter_itemtransactions_options_and_more.py  0003_alter_transactionauditlog_action.py  0004_item_item_image.py  0005_itemtransactiondetails_price.py  0006_alter_itemtransactiondetails_order_quantity.py  0014_alter_item_code.py  (+22 more)
sql/: change_item_category_subwarehouse.sql  check_item_category_subwarehouse.sql  create_index_before_populate.sql  db_backup.sql  db_full_clean.sql  db_restore.sql  inventory_delete_tables.sql  inventory_find_users_duplication.sql  inventory_fix_doplicate_doc_number.sql  inventory_verify_no_duplicates.sql  populate_faculty_item_stock_verification.sql
static/: ar.json
templates/: 404.html  500.html  base.html
(+119 files in other folders)
